<resources>
    <string name="app_name">Bin meter</string>
    <string name="bin_status">Bin status</string>
    <string name="welcome_to_the_smartbin_application">Welcome to the SmartBin application :)</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Binoe</string>

    <string name="pref_title_bin_url">Smart Bin IP</string>
    <string name="pref_default_bin_url">192.168.4.1</string>


    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="action_settings">Settings</string>

    <!-- About page strings from now on -->

    <string name="title_activity_about">About</string>
    <string name="large_text">
        "Welcome to our Smart Bin application.\n\n"
        "This project was created as part of a class at University of Glasgow. The idea is to make"
        " an open-source smart automatic bin that allows its user to interact with it in a (mostly) "
        "touch-free manner. It also provides this phone app that reports the capacity and some debug"
        " information along with the software needed to integrate it to the open source "
        "<a href="https://www.home-assistant.io/">Home Assistant hub</a>.\n"

"You can find most of the project in our <a href="https://github.com/dunker4o/smart-bin">GitHub repository</a>."
"Most required libraries to compile any portion of the code are included in the project with a few minor exceptions, which can be downloaded from the respective Arduino and python package managers freely."
"There are also hardware schematics and PCB drawings available, all done in EAGLE.\n"

"Areas of project responsibility.\n"

"The project was done by a group of three. As such, each one of us was overseeing different parts of the project. Below is a simple breakdown of the areas each one was involved in.
It\'s just an indicative list who might be able to help best if you need help with any
particular bits of the project.\n"
"Ruigang Chen - Main board (ultrasound sensors and PCB layout), Arduino software\n"
"Ronaldas Gadzimugometovas - Motors, motor drivers, Arduino software\n"
"Borislav Gachev - ESP8266 PCB and software, Android application, Home Assistant integration\n"

"Further help with the project.\n"

"Although continued support for this project has not been secured in place, we will probably
still be able to support anyone interested in the active development of it. Whether you are
just curious or want to actively work on it, just get in touch either over GitHub or email
and we will help you as much as we can.\n"
    </string>
    <string name="pref_title_display_debug">Display debug readings</string>
    <string name="pref_title_display_percentage">Display bin capacity percentage</string>
    <string name="pref_title_display_percent">Display capacity in percents</string>
</resources>
